[package]
name = "leakdice-rust"
version = "0.1.0"
authors = ["Nick Lamb <git@tree.tlrmx.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.5"
rand = "0.8"
terminal_size = "0.1"

[profile.release]
opt-level = 'z' # Small not fast
lto = true
